content/stylesheets/stylesheet.css.scss
@import "reset";
// Colours
$link-color: #3a87ad;
$white:      #fff;
$font-color: #000;
$light-grey: #bbb;

// Bootstrap label colours:
$grey:    #999999; //default
$red:     #b94a48; //danger
$yellow:  #f89406; //warning
$green:   #468847; //success
$blue:    #3a87ad; //info

%clearfix {
  &:after {
    content: " ";
    display: block;
    clear: both;
  }
}

body {
  background: $white;
  font-family: Helvetica, Arial, sans-serif;
  line-height: 1.2;
}

#main {
  max-width: 800px;

  @mixin basic-list {
    list-style: disc;
    margin-left: 20px;
    li {
      margin-bottom:10px;
    }
  }

  @mixin coloured-border {
    border-left: 8px solid;
    padding: 15px ;
  }


  @mixin colour-on-hover {
    transition: color 0.5s ease;
    &:hover { color: $red; }
  }

  header.vcard {
    @include coloured-border;
    padding-bottom: 15px;
    h1 {
      .fn {
        display: block;
        font-size: 35px;
        margin-bottom: 20px;
      }
      .title {
        display: block;
        font-size: 20px;
        margin-bottom: 30px;
      }
    }

    address {
      max-width: 500px;
      a { @include colour-on-hover; }
      dl {
        @extend %clearfix;
        min-width: 240px;
        dt {
          float: left;
          clear: left;
          width: 80px;
          &:after {
           content: ":"
          }
        }
        dd {
          float: right;
          width: 160px;
        }
      }
      .locality:after {
        content: ","
      }
    }
  }
  section {
    @include coloured-border;
    clear: both;
    margin-top: 20px;
    h2 {
      margin-bottom: 15px;
      font-size: 25px;
      font-weight: bold;
    }
    &.summary ul {
      @include basic-list;
    }

    .experience {
      margin: 40px 0 10px 0;
      header {
        font-size: 18px;
        h3.location {
          margin-bottom: 5px;
          a.org {
            font-size: 25px;
            font-weight: bold;
            @include colour-on-hover;
          }
          .adr{
            font-style: italic;
            &:before { content: "(" }
            &:after { content: ")" }
          }
        }
        .dtstart, .dtend, .duration {
          font-style: italic;
        }
      }
      ul.skills {
        margin-top: 15px;
        li.skill {
          display: inline-block;
          padding: 3px 8px;
          margin-bottom: 4px;
          color: white;

          &.dev       { background-color: $red; }
          &.non-tech  { background-color: $blue; }
          &.approach  { background-color: $green; }
        }
      }
      .description ul {
        @include basic-list;
        margin-top: 15px;
      }
    }

    .education {
      margin-bottom: 15px;
      h3.summary {
        font-size: 18px;
        display: block;
      }
      .location, .dtstart, .dtend {
        font-style: italic;
      }
    }
  }

  .interests {
    p {
      margin-bottom: 10px;
    }
  }

  .colophon {
    h3 {
      font-size: 20px;
      font-weight: bold;
      margin-bottom: 10px;
    }
    li {
      font-style: italic;
      margin-bottom: 5px;
      a {
        color: $link-color;
      }
    }
  }
}



// MOBILE ONLY
@media only screen and (max-width: 480px) {
  .experience .summary {
    display: block;
    margin-bottom: 10px;
  }
}

// SMALL
@media only screen and (max-width: 767px) {
  .experience .summary {
    margin-right: 20px;
  }
}

// TABLET & SMALLER LAPTOPS
@media only screen and (min-width: 768px) {
  .experience .summary {
    margin-right: 150px;
  }

}

// DESKTOP
@media only screen and (min-width: 960px) {
}

// LARGE VIEWING SIZE
@media only screen and (min-width: 1240px) {
}

@media print {
  body {
    color: $font-color;
    background: $white;
    width: 100%;
    margin: 0;
    padding: 0;
  }

  @page {
    margin: 1.2cm;
  }

  // Don't add page breaks in awkward places:
  h2, h3 { page-break-after: avoid; }
  header { page-break-after: avoid; }
  .skills {
    page-break-after: avoid;
    page-break-inside: avoid;
  }

  // @mixin add_link {
  //   a[href^=http]:after {
  //     content:" (" attr(href) ") ";
  //   }
  // }

  // Add links in specific places
  .experience .location a[href^=http]:after {
    content:" - " attr(href);
  }
  .source_code a[href^=http]:after {
    content:" (" attr(href) ") ";
  }

}
// // Force colour for printers which allow it:
@media print and (color) {
// @media print and (min-color-index: 256) {
  * {
    -webkit-print-color-adjust: exact;
  }
}

// Monochrome styles:
@media print and (monochrome) {
// @media print and (max-color-index: 255) {
  #main section .experience ul.skills li.skill {
    color: $font-color;
    border: 1px solid $light-grey;
    &.dev       { border-style: solid; }
    &.non-tech  { border-style: dashed; }
    &.approach  { border-style: dotted; }
  }
}

